projects/layout/components/block-status/block-status.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

tui-block-status {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    box-sizing: border-box;
    overflow: hidden;
    inline-size: 100%;
    block-size: 100%;

    &._card {
        border-radius: var(--tui-radius-xl);
        padding: 2rem;
    }

    .t-block-image:not(:empty) {
        display: flex;
        margin-bottom: 2rem;
    }

    .t-block-text:not(:empty) {
        font: var(--tui-font-text-m);
        color: var(--tui-text-secondary);
        margin-bottom: 2rem;
        white-space: pre-line;
    }

    .t-block-actions:not(:empty) {
        display: flex;
        flex-direction: column;
        align-items: center;
        inline-size: 100%;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        font: var(--tui-font-heading-4);
        margin-top: 0;
        margin-bottom: 1rem;
    }

    img {
        inline-size: 9rem;
        block-size: 9rem;
    }

    a:not(:last-child),
    button:not(:last-child) {
        margin-bottom: 0.75rem;
    }
}

[data-platform='web'] tui-block-status {
    &[data-size='m'] {
        h1,
        h2,
        h3,
        h4,
        h5,
        h6 {
            font: var(--tui-font-heading-6);
            margin-top: 0;
            margin-bottom: 0.75rem;
        }

        img {
            inline-size: 6rem;
            block-size: 6rem;
        }

        .t-block-text:not(:empty) {
            font: var(--tui-font-text-s);
            margin-bottom: 1.5rem;
        }

        .t-block-image:not(:empty) {
            margin-bottom: 1.5rem;
        }
    }
}

